Kickstarter display hack
I still like to display the 2 Kickstarter widgets side by side.

Trying to keep the layout.

--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@
 /**
  * main demo style
  */
-.videoblock {
+.videoblock-dynamic {
   max-width: 640px;
 }
 .videoblock-dynamic .wrap-scale-width iframe,
